# pocl

./: .drone.yml  CMakeLists.txt  config.h.in.cmake  test_npu2.cpp
.github/workflows/: build_arm64.yml  build_cuda.yml  build_level0.yml  build_linux.yml  build_linux_gh.yml  build_macos.yml  build_openasip_vulkan.yml  build_remote.yml
cmake/: LLVM.cmake  LLVMPoclSetup.cmake  bitcode_rules.cmake
doc/sphinx/source/: debug.rst  macos.rst  remote.rst  using.rst
examples/EinsteinToolkit/: EinsteinToolkit.c
examples/PyOpenCL/: CMakeLists.txt  README  configure.sh
examples/SYCL_CTS/: CMakeLists.txt
examples/chipStar/: CMakeLists.txt
examples/conformance/: CMakeLists.txt
include/: _clang_opencl.h  pocl.h  pocl_cache.h  pocl_export.h
include/CL/: cl_exp_defined_builtin_kernels.h  cl_exp_tensor.h  cl_ext_pocl.h
lib/CL/: CMakeLists.txt  clCommandHostFuncPOCL.c  clCommandReadBufferPOCL.c  clCommandReadBufferRectPOCL.c  clCommandReadImagePOCL.c  clCommandSVMMemcpyPOCL.c  clCommandSVMMemcpyRectPOCL.c  clCommandSVMMemfillPOCL.c  clCommandSVMMemfillRectPOCL.c  clCommandSignalEventPOCL.c  clCommandWaitForEventPOCL.c  clCommandWriteBufferPOCL.c  clCommandWriteBufferRectPOCL.c  clCommandWriteImagePOCL.c  clCreateBuffer.c  clCreateBuiltinKernelWithAttributes.c  clCreateCommandBufferKHR.c  clCreateCommandQueueWithProperties.c  clCreateKernel.c  clCreateProgramWithBuiltInKernels.c  clCreateProgramWithDefinedBuiltInKernels.c  clCreateProgramWithIL.c  clCreateSubBuffer.c  clEnqueueCopyBuffer.c  clEnqueueCopyBufferRect.c  clEnqueueCopyBufferToImage.c  clEnqueueCopyImage.c  clEnqueueCopyImageToBuffer.c  clEnqueueFillBufferRect.c  clEnqueueReadBuffer.c  clEnqueueReadBufferRect.c  clEnqueueReadImage.c  clEnqueueReleaseEGLObjectsKHR.c  clEnqueueSVMMemcpy.c  clEnqueueSVMMemcpyRectPOCL.c  clEnqueueSVMMemfillRectPOCL.c  clEnqueueWaitForEvents.c  clEnqueueWriteBuffer.c  clEnqueueWriteBufferRect.c  clEnqueueWriteImage.c  (+56 more)
lib/CL/dbk/: pocl_dbk_khr_jpeg_shared.c
lib/CL/devices/: CMakeLists.txt  builtin_kernels.c  builtin_kernels.cc  builtin_kernels.h  common.c  common.h  common_driver.c  common_driver.h  common_utils.c  common_utils.h  devices.c  printf_base.c  prototypes.inc  signal_handlers.c
lib/CL/devices/almaif/: AlmaifShared.hh
lib/CL/devices/almaif/AlmaifDB/: AlmaIFBitstreamDatabaseManager.hh
lib/CL/devices/basic/: CMakeLists.txt  basic.c
lib/CL/devices/cuda/: CMakeLists.txt  pocl-cuda.c
lib/CL/devices/hsa/: pocl-hsa.c
lib/CL/devices/level0/: CMakeLists.txt  level0-compilation.cc  level0-compilation.hh  level0-driver.cc  level0-driver.hh  npu_dbk.h  npu_dbk_arithm.cc  npu_dbk_gemm.cc  npu_dbk_matmul.cc  pocl-level0.cc
lib/CL/devices/level0/MTL/pocl.gemm.fp16/: gemm-fp16.xml
lib/CL/devices/level0/MTL/pocl.gemm.fp32/: gemm-fp32.xml
lib/CL/devices/proxy/: pocl_proxy.c
lib/CL/devices/pthread/: CMakeLists.txt  pthread.c  pthread_scheduler.c
lib/CL/devices/remote/: communication.c
lib/CL/devices/synapse/: CMakeLists.txt  synapse.cc  synapse.h  synapse_kernel.cc  synapse_kernel.hh
lib/CL/devices/tbb/: tbb_scheduler.cc  tbb_scheduler.h
lib/CL/devices/tce/: tce_common.cc
lib/CL/devices/tce/ttasim/: ttasim.cc
lib/CL/devices/vulkan/: pocl-vulkan.c
lib/kernel/: ldexp.cl  subgroups.cl
lib/kernel/host/: CMakeLists.txt
lib/llvmopencl/: CMakeLists.txt  DivByZero.cc  DivByZero.h  Flatten.cc  LLVMUtils.cc  LLVMUtils.h  PHIsToAllocas.cc  SubCFGFormation.cc  VariableUniformityAnalysis.cc  VariableUniformityAnalysis.h  VariableUniformityAnalysisResult.hh  Workgroup.cc  linker.cpp
tests/: CMakeLists.txt
tests/regression/: CMakeLists.txt  test_program_from_binary_with_local_1_1_1.c
tests/runtime/: CMakeLists.txt  test_clCreateSubDevices.c  test_dbk_matmul.cpp  test_npu.cpp  test_npu_gemm16.cpp  test_npu_gemm32.cpp
tools/scripts/: format-last-commit.sh  style.GNU
